--- a/PortfolioAngular/src/app/componentes/proyectos/editar-proyectos/editar-proyectos.component.html
+++ b/PortfolioAngular/src/app/componentes/proyectos/editar-proyectos/editar-proyectos.component.html
@@ -9,7 +9,7 @@
     
     <div class="container d-flex row justify-content-center align-items-center">
         <div class="col-sm-12 col-md-8 mb-3">
-            <div class="card">
+            <div class="card shadow">
                 <div class="card-body px-4 py-4">
 
                     <!--Formulario-->
@@ -19,26 +19,47 @@
                             <label for="nombre_proyecto" class="col-form-label fw-bold">
                                 Nombre del proyecto
                             </label>
-                            <input type="text" class="form-control" id="nombre_proyecto" name="nombre_proyecto" [(ngModel)]="proyectoActual.nombre_proyecto">                  
+                            <input type="text" class="form-control" id="nombre_proyecto" name="nombre_proyecto" [(ngModel)]="proyectoActual.nombre_proyecto" placeholder="Nombre">                  
                         </div>
+
+                        <div class="form-group col-12">
+                            <label for="fecha_creacion" class="col-form-label fw-bold">
+                                Fecha de creación
+                            </label>
+                            <input type="text" class="form-control" id="fecha_creacion" name="fecha_creacion" [(ngModel)]="proyectoActual.fecha_creacion" placeholder="Fecha de realización del proyecto">                  
+                        </div>
+
+                        <div class="form-group col-12">
+                            <label for="descripcion" class="col-form-label fw-bold">
+                               Descripción del proyecto
+                           </label>
+                           <textarea class="form-control" id="descripcion" style="height: 100px" name="descripcion" [(ngModel)]="proyectoActual.descripcion" placeholder="Breve descripción del proyecto"></textarea>
+                       </div>
     
+                        <div class="form-group col-12">
+                            <label for="url_imagen" class="col-form-label fw-bold">
+                                Url de la imagen
+                            </label>
+                            <input type="text" class="form-control" id="url_imagen" name="url_imagen" [(ngModel)]="proyectoActual.url_imagen" placeholder="Imagen del proyecto">
+                        </div>
+
                         <div class="form-group col-12">
                             <label for="url_repositorio" class="col-form-label fw-bold">
                                 Url del repositorio
                             </label>
-                            <input type="text" class="form-control" id="url_repositorio" name="url_repositorio" [(ngModel)]="proyectoActual.url_repositorio">
+                            <input type="text" class="form-control" id="url_repositorio" name="url_repositorio" [(ngModel)]="proyectoActual.url_repositorio" placeholder="Repositorio del proyecto">
                         </div>
 
                         <div class="form-group col-12">
                             <label for="url_proyecto" class="col-form-label fw-bold">
                                 Url del proyecto
                             </label>
-                            <input type="text" class="form-control" id="url_proyecto" name="url_proyecto" [(ngModel)]="proyectoActual.url_proyecto">
+                            <input type="text" class="form-control" id="url_proyecto" name="url_proyecto" [(ngModel)]="proyectoActual.url_proyecto" placeholder="Vista previa del proyecto">
                         </div>
     
                         <!--Boton Agregar-->
-                        <div class="col-9 offset" *ngIf="!proyectoActual.id else elseBlock">
-                            <button (click)="agregarProyecto()" type="button" class="btn btn-dark me-2" name="addButton" id="editButton">
+                        <div class="col-12 d-flex justify-content-center" *ngIf="!proyectoActual.id else elseBlock">
+                            <button (click)="agregarProyecto()" type="button" class="btn btn-dark me-2" name="addButton" id="addButton">
                                 Agregar
                             </button>
                             <button type="button" class="btn btn-secondary" routerLink="/portfolio" name="cancelButton" id="cancelButton">
@@ -48,8 +69,8 @@
 
                         <!--Boton Modificar-->
                         <ng-template #elseBlock>
-                            <div class="col-9 offset">
-                                <button (click)="editarProyecto(proyectoActual)" type="submit" class="btn btn-dark me-2" name="addButton" id="editButton">
+                            <div class="col-12 d-flex justify-content-center">
+                                <button (click)="editarProyecto(proyectoActual)" type="submit" class="btn btn-dark me-2" name="editButton" id="editButton">
                                     Modificar
                                 </button>
                                 <button type="button" class="btn btn-secondary" routerLink="/portfolio" name="cancelButton" id="cancelButton">
