--- a/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,8 +1,23 @@
   <!--SOBRE MI-->
   <section id="about" class="about-section">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-7" *ngFor="let persona of personasList">
+      <div class="row align-items-center" *ngFor="let persona of personasList">
+        
+
+        <!--Botón Agregar-->
+        <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+          <a href="#" routerLink="/agregar-persona"><i class="bi bi-plus-circle-fill"></i></a>
+        </span> 
+
+        <!--Botones Editar y Eliminar-->
+        <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+          <a href="#" routerLink="/editar-persona/{{persona.id}}"><i class="bi bi-pen-fill"></i></a>
+          <a (click)="borrarPersona(persona?.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
+        </span>
+
+
+        <!--Descripcion Sobre mi-->
+        <div class="col-lg-7">
           <h2 class="section-title">Sobre <span>mí</span></h2>
           <p>{{persona?.sobre_mi}}</p>
         
@@ -16,8 +31,8 @@
         </div>
   
         <!--Imagen de Perfil-->
-        <div class="col-lg-5 text-center">
-          <img class="imgperfil" src="/assets/img/Img Perfil.png" alt="Foto de perfil">
+        <div class="col-lg-5 text-center" *ngFor="let persona of personasList">
+          <img class="imgperfil" [src]="persona?.url_imagen" alt="Foto de perfil">
         </div>
 
       </div> <!--Termina Fila-->
