--- a/PortfolioAngular/src/app/componentes/educacion/editar-educacion/editar-educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/editar-educacion/editar-educacion.component.html
@@ -9,7 +9,7 @@
     
     <div class="container d-flex row justify-content-center align-items-center">
         <div class="col-sm-12 col-md-8 mb-3">
-            <div class="card">
+            <div class="card shadow">
                 <div class="card-body px-4 py-4">
 
                     <!--Formulario-->                
@@ -19,47 +19,47 @@
                             <label for="nombre_curso" class="col-form-label fw-bold">
                                 Nombre del curso
                             </label>
-                            <input type="text" class="form-control" id="nombre_curso" name="nombre_curso" [(ngModel)]="cursoActual.nombre_curso">                  
+                            <input type="text" class="form-control" id="nombre_curso" name="nombre_curso" [(ngModel)]="cursoActual.nombre_curso" placeholder="Nombre">                  
                         </div>
     
                         <div class="form-group col-6">
                             <label for="fecha_inicio" class="col-form-label fw-bold">
                                 Fecha de inicio
                             </label>
-                            <input type="text" class="form-control" id="fecha_inicio" name="fecha_inicio" [(ngModel)]="cursoActual.fecha_inicio">
+                            <input type="text" class="form-control" id="fecha_inicio" name="fecha_inicio" [(ngModel)]="cursoActual.fecha_inicio" placeholder="Año">
                         </div>
 
                         <div class="form-group col-6">
                             <label for="fecha_fin" class="col-form-label fw-bold">
                                 Fecha de fin
                             </label>
-                            <input type="text" class="form-control" id="fecha_fin" name="fecha_fin" [(ngModel)]="cursoActual.fecha_fin">
+                            <input type="text" class="form-control" id="fecha_fin" name="fecha_fin" [(ngModel)]="cursoActual.fecha_fin" placeholder="Año">
                         </div>
   
                         <div class="form-group col-12">
                              <label for="descripcion" class="col-form-label fw-bold">
                                 Descripción del curso
                             </label>
-                            <textarea class="form-control" id="descripcion" style="height: 100px" name="descripcion" [(ngModel)]="cursoActual.descripcion"></textarea>
+                            <textarea class="form-control" id="descripcion" style="height: 100px" name="descripcion" [(ngModel)]="cursoActual.descripcion" placeholder="Descripción de los conceptos aprendidos"></textarea>
                         </div>
   
                         <div class="form-group col-12">
                             <label for="lenguaje" class="col-form-label fw-bold">
                                 Lenguajes
                             </label>
-                            <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoActual.lenguaje"></textarea>
+                            <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoActual.lenguaje" placeholder="Lenguajes aprendidos"></textarea>
                         </div>
   
                         <div class="form-group col-12">
                             <label for="url_curso" class="col-form-label fw-bold">
                                 Url del sitio web
                             </label>
-                            <input type="text" class="form-control" id="url_curso" name="url_curso" [(ngModel)]="cursoActual.url_curso">
+                            <input type="text" class="form-control" id="url_curso" name="url_curso" [(ngModel)]="cursoActual.url_curso" placeholder="Sitio web">
                         </div>
     
                         <!--Boton Agregar-->
-                        <div class="col-9 offset" *ngIf="!cursoActual.id else elseBlock">
-                            <button (click)="agregarCurso()" type="button" class="btn btn-dark me-2" name="addButton" id="editButton">
+                        <div class="col-12 d-flex justify-content-center" *ngIf="!cursoActual.id else elseBlock">
+                            <button (click)="agregarCurso()" type="button" class="btn btn-dark me-2" name="addButton" id="addButton">
                                 Agregar
                             </button>
                             <button type="button" class="btn btn-secondary" routerLink="/portfolio" name="cancelButton" id="cancelButton">
@@ -69,8 +69,8 @@
 
                         <!--Boton Modificar-->
                         <ng-template #elseBlock>
-                            <div class="col-9 offset">
-                                <button (click)="editarCurso(cursoActual)" type="submit" class="btn btn-dark me-2" name="addButton" id="editButton">
+                            <div class="col-12 d-flex justify-content-center">
+                                <button (click)="editarCurso(cursoActual)" type="submit" class="btn btn-dark me-2" name="editButton" id="editButton">
                                     Modificar
                                 </button>
                                 <button type="button" class="btn btn-secondary" routerLink="/portfolio" name="cancelButton" id="cancelButton">
