--- a/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
@@ -8,20 +8,20 @@
       </div>
 
       <!--Botón Agregar-->
-      <span class="edicion-icon d-flex justify-content-end">
+      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
         <a href="#" routerLink="/agregar-educacion"><i class="bi bi-plus-circle-fill"></i></a>
       </span>
   
-        <!--Curso-->
+        <!--Tarjeta Curso-->
         <div class="row justify-content-around">
           <div class="card-group col-sm-12 col-md-6 mb-3" *ngFor="let curso of cursosList">
-            <div class="card">
+            <div class="card shadow">
               <div class="card-body px-4 py-4">
                 <div class="d-flex justify-content-between">
                   <h5 class="card-title fw-bold">{{curso?.nombre_curso}}</h5>                  
                   
                   <!--Botones Editar y Eliminar-->
-                  <span class="edicion-icon">
+                  <span class="edicion-icon" id="edicion-icon">
                     <a href="#" routerLink="/editar-educacion/{{curso.id}}"><i class="bi bi-pen-fill"></i></a>
                     <a (click)="borrarCurso(curso.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
                   </span>
