--- a/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
+++ b/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
@@ -11,12 +11,12 @@
       </div>
 
       <!--Botón Agregar-->
-      <span class="edicion-icon d-flex justify-content-end">
+      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
         <a class="nav-link" href="#" routerLink="/agregar-habilidad"><i class="bi bi-plus-circle-fill"></i></a>
       </span>
 
 
-      <!--CARD SKILL-->
+      <!--Tarjeya Habilidad-->
       <div class="row justify-content-around">
         <div class="col-sm-12 col-md-6 mb-3" *ngFor="let skill of skillsList" >
           <div class="card mb-0 border-0 shadow-none">
@@ -33,7 +33,7 @@
                 </div>
   
                 <!--Botones Editar y Eliminar-->
-                <span class="edicion-icon d-flex justify-content-end mt-1">
+                <span class="edicion-icon d-flex justify-content-end mt-1" id="edicion-icon">
                   <a href="#" routerLink="/editar-habilidad/{{skill.id}}"><i class="bi bi-pen-fill"></i></a>
                   <a (click)="borrarHabilidad(skill.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
                 </span>             
