--- a/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
+++ b/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
@@ -8,7 +8,7 @@
       </div>
 
       <!--Botón Agregar-->
-      <span class="edicion-icon d-flex justify-content-end">
+      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
         <a class="nav-link" routerLink="/agregar-proyecto"><i class="bi bi-plus-circle-fill"></i></a>
       </span>
   
@@ -16,17 +16,17 @@
         <div class="container text-center proyectos-contenedor">
           <div class="row">
   
-        <!--Proyecto-->
+            <!--Proyecto-->
             <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let proyecto of proyectosList">
+              
+              <!--Botones Editar y Eliminar-->
+              <span class="edicion-icon" id="edicion-icon">
+                <a href="#" routerLink="/editar-proyecto/{{proyecto.id}}"><i class="bi bi-pen-fill"></i></a>
+                <a (click)="borrarProyecto(proyecto.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
+              </span>
+
               <div class="proyecto">
-
-                <!--Botones Editar y Eliminar-->
-                <span class="edicion-icon">
-                  <a href="#" routerLink="/editar-proyecto/{{proyecto.id}}"><i class="bi bi-pen-fill"></i></a>
-                  <a (click)="borrarProyecto(proyecto.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
-                </span>
-
-                <img src="assets/img/Img Proyecto.jpg" alt="Proyecto">
+                <img [src]="proyecto?.url_imagen" alt="Imagen de proyecto">
                 <div class="overlay">
                   <p>{{proyecto?.nombre_proyecto}}</p>
                   <div class="iconos-contenedor">
@@ -37,14 +37,25 @@
                       <i class="bi bi-zoom-in"></i>
                     </a>
                   </div>
+                </div> 
+              </div>
+
+              <!--Boton Saber Mas-->
+              <a data-bs-toggle="collapse" href="#detalleProyecto" role="button" aria-expanded="false" aria-controls="detalleProyecto">
+                Saber más
+              </a>
+              <div class="collapse multi-collapse" id="detalleProyecto">
+                <div class="card card-body">
+                  <p class="card-text text-muted fw-bold">{{proyecto?.fecha_creacion}}</p>
+                  <p class="card-text text-muted">{{proyecto?.descripcion}}</p>
                 </div>
               </div>
-            </div>
-
+                            
+            </div> <!--Cierre Proyecto-->
           </div> <!--Cierre Fila-->
      
         </div> <!--Cierre 2do Container-->
-        
+                
     </div> <!--Cierre 1er Container-->
 
   </section>
