--- a/PortfolioAngular/src/app/componentes/educacion/editar-educacion/editar-educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/editar-educacion/editar-educacion.component.html
@@ -45,9 +45,9 @@
   
                         <div class="form-group col-12">
                             <label for="lenguaje" class="col-form-label fw-bold">
-                                Lenguajes
+                                Lenguajes/Programas
                             </label>
-                            <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoActual.lenguaje" placeholder="Lenguajes aprendidos"></textarea>
+                            <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoActual.lenguaje" placeholder="Lenguajes y/o programas aprendidos"></textarea>
                         </div>
   
                         <div class="form-group col-12">
