--- a/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
@@ -9,7 +9,9 @@
 
       <!--Botón Agregar-->
       <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
-        <a href="#" routerLink="/agregar-educacion"><i class="bi bi-plus-circle-fill"></i></a>
+        <a href="#" routerLink="/agregar-educacion">
+          <i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i>
+        </a>
       </span>
   
         <!--Tarjeta Curso-->
@@ -22,14 +24,18 @@
                   
                   <!--Botones Editar y Eliminar-->
                   <span class="edicion-icon" id="edicion-icon">
-                    <a href="#" routerLink="/editar-educacion/{{curso.id}}"><i class="bi bi-pen-fill"></i></a>
-                    <a (click)="borrarCurso(curso.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
+                    <a href="#" routerLink="/editar-educacion/{{curso.id}}">
+                      <i class="bi bi-pen-fill" *ngIf="isLogged"></i>
+                    </a>
+                    <a (click)="borrarCurso(curso.id)" href="#">
+                      <i class="bi bi-trash3-fill" *ngIf="isLogged"></i>
+                    </a>
                   </span>
 
                 </div>
                 <p class="card-text text-muted fw-bold">{{curso?.fecha_inicio}} - {{curso?.fecha_fin}}</p>
                 <p class="card-text text-muted">{{curso?.descripcion}}</p>
-                <p class="card-text text-muted">Lenguajes: {{curso?.lenguaje}}</p>
+                <p class="card-text text-muted">Lenguajes/Programas: {{curso?.lenguaje}}</p>
                 <a href={{curso?.url_curso}} target="_blank" class="btn btn-primary">Sitio web</a>
               </div>
             </div>      
