--- a/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
+++ b/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
@@ -6,7 +6,7 @@
       <div class="container-fluid">
   
       <!--Logo Argentina Programa-->
-        <a class="navbar-brand" href="" target="_blank" rel="noopener noreferrer">
+        <a class="navbar-brand" href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa" target="_blank" rel="noopener noreferrer">
           <img class="logotipo" src="/assets/img/Logo Arg Prog.png" alt="Logo Arg Prog">
         </a>
   
@@ -18,22 +18,34 @@
         <div class="collapse navbar-collapse" id="navbarNav" *ngFor="let persona of personasList">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a (click)="toHome()" routerLinkActive="active" class="nav-link active fw-bold" aria-current="page" style="color: #D47AE8; cursor: pointer;">Home</a>
+              <a (click)="toHome()" routerLinkActive="active" class="nav-link active fw-bold" aria-current="page" style="color: #D47AE8; cursor: pointer;">
+                Home
+              </a>
             </li>
             <li class="nav-item">
-              <a (click)="toAbout()" routerLinkActive="active" class="nav-link page-scroll" style="cursor: pointer;">Sobre mí</a>
+              <a (click)="toAbout()" routerLinkActive="active" class="nav-link page-scroll" style="cursor: pointer;">
+                Sobre mí
+              </a>
             </li>
             <li  class="nav-item">
-              <a (click)="toEducation()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Educación</a>
+              <a (click)="toEducation()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">
+                Educación
+              </a>
             </li>
             <li class="nav-item">
-              <a (click)="toSkills()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Habilidades</a>
+              <a (click)="toSkills()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">
+                Habilidades
+              </a>
             </li>
             <li class="nav-item">
-              <a (click)="toExperience()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Experiencia</a>
+              <a (click)="toExperience()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">
+                Experiencia
+              </a>
             </li>
             <li class="nav-item">
-              <a (click)="toProjects()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Proyectos</a>
+              <a (click)="toProjects()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">
+                Proyectos
+              </a>
             </li>
           </ul>
           <hr class="text-black-50">
@@ -41,15 +53,21 @@
         <!--Iconos Redes Sociales-->
           <ul class="navbar-nav flex-row flex-wrap text-center">
             <li class="nav-item col-4 col-lg-auto" id="iconos-barra">
-              <a class="nav-link" href={{persona?.url_linkedin}} target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+              <a class="nav-link" href={{persona?.url_linkedin}} target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+              </a>
             </li>
             <li class="nav-item col-4 col-lg-auto">
-              <a class="nav-link" href={{persona?.url_github}} target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+              <a class="nav-link" href={{persona?.url_github}} target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+              </a>
             </li>
             <li class="nav-item col-4 col-lg-auto">
-              <a class="nav-link" routerLink="/iniciar-sesion"><i class="bi bi-person-circle"></i></a>          
+              <a class="nav-link" routerLink="/iniciar-sesion">
+                <i class="bi bi-person-circle"></i>
+              </a>          
             </li>
-          </ul> <!--Cierre Lista-->
+          </ul> 
         </div>
 
       </div> <!--Cierre container-->
