--- a/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
+++ b/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
@@ -12,7 +12,9 @@
 
       <!--Botón Agregar-->
       <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
-        <a class="nav-link" href="#" routerLink="/agregar-habilidad"><i class="bi bi-plus-circle-fill"></i></a>
+        <a class="nav-link" href="#" routerLink="/agregar-habilidad">
+          <i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i>
+        </a>
       </span>
 
 
@@ -34,8 +36,12 @@
   
                 <!--Botones Editar y Eliminar-->
                 <span class="edicion-icon d-flex justify-content-end mt-1" id="edicion-icon">
-                  <a href="#" routerLink="/editar-habilidad/{{skill.id}}"><i class="bi bi-pen-fill"></i></a>
-                  <a (click)="borrarHabilidad(skill.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
+                  <a href="#" routerLink="/editar-habilidad/{{skill.id}}">
+                    <i class="bi bi-pen-fill" *ngIf="isLogged"></i>
+                  </a>
+                  <a (click)="borrarHabilidad(skill.id)" href="#">
+                    <i class="bi bi-trash3-fill" *ngIf="isLogged"></i>
+                  </a>
                 </span>             
               
             </div>
