--- a/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
@@ -2,17 +2,13 @@
   <section id="about" class="about-section">
     <div class="container">
       <div class="row align-items-center" *ngFor="let persona of personasList">
-        
+   
 
-        <!--Botón Agregar-->
-        <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
-          <a href="#" routerLink="/agregar-persona"><i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i></a>
-        </span> 
-
-        <!--Botones Editar y Eliminar-->
-        <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
-          <a href="#" routerLink="/editar-persona/{{persona.id}}"><i class="bi bi-pen-fill" *ngIf="isLogged"></i></a>
-          <a (click)="borrarPersona(persona?.id)" href="#"><i class="bi bi-trash3-fill" *ngIf="isLogged"></i></a>
+        <!--Boton Editar-->
+        <span class="edicion-icon d-flex justify-content-end" id="edicion-icon" *ngIf="isLogged">
+          <a href="#" routerLink="/editar-persona/{{persona.id}}">
+            <i class="bi bi-pencil-fill"></i>
+          </a>          
         </span>
 
 
