--- a/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
@@ -8,9 +8,9 @@
       </div>
 
       <!--Botón Agregar-->
-      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon" *ngIf="isLogged">
         <a href="#" routerLink="/agregar-educacion">
-          <i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i>
+          <i class="bi bi-plus-circle-fill"></i>
         </a>
       </span>
   
@@ -23,12 +23,12 @@
                   <h5 class="card-title fw-bold">{{curso?.nombre_curso}}</h5>                  
                   
                   <!--Botones Editar y Eliminar-->
-                  <span class="edicion-icon" id="edicion-icon">
+                  <span class="edicion-icon" id="edicion-icon" *ngIf="isLogged">
                     <a href="#" routerLink="/editar-educacion/{{curso.id}}">
-                      <i class="bi bi-pen-fill" *ngIf="isLogged"></i>
+                      <i class="bi bi-pencil-fill"></i>
                     </a>
                     <a (click)="borrarCurso(curso.id)" href="#">
-                      <i class="bi bi-trash3-fill" *ngIf="isLogged"></i>
+                      <i class="bi bi-trash3-fill"></i>
                     </a>
                   </span>
 
