--- a/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
+++ b/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
@@ -10,9 +10,9 @@
         <div class="container block shadow pt-4 ps-5"> 
 
           <!--Botón Agregar-->
-          <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+          <span class="edicion-icon d-flex justify-content-end" id="edicion-icon" *ngIf="isLogged">
             <a class="nav-link" routerLink="/agregar-experiencia">
-              <i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i>
+              <i class="bi bi-plus-circle-fill"></i>
             </a>
           </span>
           
@@ -24,12 +24,12 @@
               </span>
 
               <!--Botones Editar y Eliminar-->
-              <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+              <span class="edicion-icon d-flex justify-content-end" id="edicion-icon" *ngIf="isLogged">
                 <a href="#" routerLink="/editar-experiencia/{{trabajo.id}}">
-                  <i class="bi bi-pen-fill" *ngIf="isLogged"></i>
+                  <i class="bi bi-pencil-fill"></i>
                 </a>
                 <a (click)="borrarTrabajo(trabajo.id)" href="#">
-                  <i class="bi bi-trash3-fill" *ngIf="isLogged"></i>
+                  <i class="bi bi-trash3-fill"></i>
                 </a>
               </span>
 
