--- a/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
+++ b/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
@@ -11,9 +11,9 @@
       </div>
 
       <!--Botón Agregar-->
-      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon">
+      <span class="edicion-icon d-flex justify-content-end" id="edicion-icon" *ngIf="isLogged">
         <a class="nav-link" href="#" routerLink="/agregar-habilidad">
-          <i class="bi bi-plus-circle-fill" *ngIf="isLogged"></i>
+          <i class="bi bi-plus-circle-fill"></i>
         </a>
       </span>
 
@@ -35,12 +35,12 @@
                 </div>
   
                 <!--Botones Editar y Eliminar-->
-                <span class="edicion-icon d-flex justify-content-end mt-1" id="edicion-icon">
+                <span class="edicion-icon d-flex justify-content-end mt-1" id="edicion-icon" *ngIf="isLogged">
                   <a href="#" routerLink="/editar-habilidad/{{skill.id}}">
-                    <i class="bi bi-pen-fill" *ngIf="isLogged"></i>
+                    <i class="bi bi-pencil-fill"></i>
                   </a>
                   <a (click)="borrarHabilidad(skill.id)" href="#">
-                    <i class="bi bi-trash3-fill" *ngIf="isLogged"></i>
+                    <i class="bi bi-trash3-fill"></i>
                   </a>
                 </span>             
               
